--- a/src/components/NewPost.module.css
+++ b/src/components/NewPost.module.css
@@ -28,7 +28,7 @@
   
   .actions {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     gap: 0.5rem;
   }
   
