--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -7,7 +7,7 @@
     animation: animate-in 1s ease-out forwards;
   }
   
-  .author {
+  .name {
     font-size: 0.8rem;
     font-weight: bold;
     color: #543280;
